--- a/.env.example
+++ b/.env.example
@@ -28,12 +28,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=c6ec91fd86092b
+MAIL_PASSWORD=4a69f276e05da9
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=blog@khokon.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
