--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "shetabit/visitor": "^3.1",
         "spatie/laravel-menu": "^4.0"
     },
     "require-dev": {
