--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "shetabit/visitor": "^3.1",
-        "spatie/laravel-menu": "^4.0"
+        "spatie/laravel-menu": "^4.0",
+        "spatie/laravel-permission": "^5.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
